Export of Website for Concept Approval

--- a/Export/about.html
+++ b/Export/about.html
@@ -4,29 +4,31 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Features - Mottashaw Consulting</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=91180125d193e45e653b99b7314045c4">
-    <link rel="stylesheet" href="assets/css/Raleway.css?h=4478dfdee49cceb2ce7e6f430d4d3cfa">
+    <title>About - Mottashaw Consulting</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Raleway.css">
+    <link rel="stylesheet" href="assets/css/bss-overrides.css">
+    <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav">
-        <div class="container"><img src="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b" style="height: 50px;">
+    <nav class="navbar navbar-expand-md fixed-top py-3 navbar-shrink" id="mainNav">
+        <div class="container"><img src="assets/img/mottashaw-logo-big.webp" style="height: 50px;">
             <div class="container" style="width: fit-content;padding: 0px;">
                 <div class="row" style="width: fit-content;margin: 0px;">
-                    <div class="col"><a class="navbar-brand d-flex align-items-center" href="/" style="margin: 0px;padding: 0px;"><span>Mottashaw Consulting</span></a><span>Switched on Solutions</span></div>
+                    <div class="col"><a class="navbar-brand d-flex align-items-center" href="" style="margin: 0px;padding: 0px;"><span>Mottashaw Consulting</span></a><span>Switched on Solutions</span></div>
                 </div>
             </div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/features.html">Features</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <section class="py-5 mt-5">
+    <section class="mt-5 py-5">
         <div class="container py-4 py-xl-5">
             <h1 class="display-6 fw-bold mb-4"><span class="underline">Company History</span>.</h1>
             <p class="my-4">Launched in 2007 to provide a flexible and bespoke solutions to the learning needs within the security training and vocational qualification environment to include: front of house operations, customer service, business administration, small business operations, management, security, project delivery, and employability.<br><br>We cover all aspects of the training cycle from; training needs analysis such as for members of a community forum; creation of materials to meet a specific departmental need such as GDPR, delivery of complete standardised qualifications such as the SIA PSS (CCTV) licencing course; assessment of learning such as NVQ2 Team Leading and underpinning diploma for Business Administration NVQ3; End Point Assessment of apprenticeships from “both sides of the desk” and; internal verification and moderation.<br><br>Please <a href="contact.html">contact us</a> and find out how we can help you.</p>
@@ -38,7 +40,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="assets/img/Laura.webp?h=874ffae36969ea3d49a37f8ab08fb796" width="476" height="634"></div>
+                    <div><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="assets/img/Laura.webp" width="476" height="634"></div>
                 </div>
             </div>
             <h1 class="display-6 fw-bold mb-4"><span class="underline">Our Clients</span></h1>
@@ -59,8 +61,8 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/startup-modern.js?h=860a1ecddc64fd24c02f2fc109343dbd"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/startup-modern.js"></script>
 </body>
 
 </html>
