--- a/Export/404.html
+++ b/Export/404.html
@@ -5,13 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Page Not Found - Mottashaw Consulting</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=91180125d193e45e653b99b7314045c4">
-    <link rel="stylesheet" href="assets/css/Raleway.css?h=4478dfdee49cceb2ce7e6f430d4d3cfa">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Raleway.css">
+    <link rel="stylesheet" href="assets/css/bss-overrides.css">
+    <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav">
-        <div class="container"><img src="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b" style="height: 50px;">
+    <nav class="navbar navbar-expand-md fixed-top py-3 navbar-shrink" id="mainNav">
+        <div class="container"><img src="assets/img/mottashaw-logo-big.webp" style="height: 50px;">
             <div class="container" style="width: fit-content;padding: 0px;">
                 <div class="row" style="width: fit-content;margin: 0px;">
                     <div class="col"><a class="navbar-brand d-flex align-items-center" href="/" style="margin: 0px;padding: 0px;"><span>Mottashaw Consulting</span></a><span>Switched on Solutions</span></div>
@@ -20,16 +22,16 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/features.html">Features</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <section class="py-5 mt-5">
+    <section class="mt-5 py-5">
         <div class="container">
             <div class="row row-cols-1 d-flex justify-content-center align-items-center">
-                <div class="col-md-10 text-center"><img class="img-fluid w-100" src="assets/img/illustrations/404.svg?h=e977af73548094596c29b66e8ed72eb9"></div>
+                <div class="col-md-10 text-center"><img class="img-fluid w-100" src="assets/img/illustrations/404.svg"></div>
                 <div class="col text-center">
                     <h2 class="display-3 fw-bold mb-4">Page Not Found</h2>
                     <p class="fs-4 text-muted">Fusce adipiscing sit, torquent porta pulvinar.</p>
@@ -45,8 +47,8 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/startup-modern.js?h=860a1ecddc64fd24c02f2fc109343dbd"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/startup-modern.js"></script>
 </body>
 
 </html>
