--- a/Export/contact.html
+++ b/Export/contact.html
@@ -5,28 +5,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Contact - Mottashaw Consulting</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=91180125d193e45e653b99b7314045c4">
-    <link rel="stylesheet" href="assets/css/Raleway.css?h=4478dfdee49cceb2ce7e6f430d4d3cfa">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Raleway.css">
+    <link rel="stylesheet" href="assets/css/bss-overrides.css">
+    <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav">
-        <div class="container"><img src="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b" style="height: 50px;">
+    <nav class="navbar navbar-expand-md fixed-top py-3 navbar-shrink" id="mainNav">
+        <div class="container"><img src="assets/img/mottashaw-logo-big.webp" style="height: 50px;">
             <div class="container" style="width: fit-content;padding: 0px;">
                 <div class="row" style="width: fit-content;margin: 0px;">
-                    <div class="col"><a class="navbar-brand d-flex align-items-center" href="/" style="margin: 0px;padding: 0px;"><span>Mottashaw Consulting</span></a><span>Switched on Solutions</span></div>
+                    <div class="col"><a class="navbar-brand d-flex align-items-center" href="" style="margin: 0px;padding: 0px;"><span>Mottashaw Consulting</span></a><span>Switched on Solutions</span></div>
                 </div>
             </div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/features.html">Features</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <section class="py-5 mt-5">
+    <section class="mt-5 py-5">
         <div class="container" style="height: 55px;"></div>
         <div class="container">
             <div class="row">
@@ -34,11 +36,11 @@
                     <h2 class="display-6 fw-bold mb-4">Got any <span class="underline">questions</span>?</h2>
                     <p class="text-muted">Our team is always here to help. Send us a message and we'll get back to you shortly.</p>
                     <div>
-                        <form class="p-3 p-xl-4" method="post" data-bs-theme="light">
+                        <form class="p-3 p-xl-4" data-bs-theme="light" data-bss-recipient="3235e988285c5f86ff5638f9460b8ab9">
                             <div class="mb-3"><input class="shadow form-control" type="text" id="name-1" name="name" placeholder="Name"></div>
                             <div class="mb-3"><input class="shadow form-control" type="email" id="email-1" name="email" placeholder="Email"></div>
                             <div class="mb-3"><textarea class="shadow form-control" id="message-1" name="message" rows="6" placeholder="Message"></textarea></div>
-                            <div><button class="btn btn-primary shadow d-block w-100" type="submit">Send </button></div>
+                            <div><button class="btn btn-primary shadow w-100 d-block" type="submit">Send </button></div>
                         </form>
                     </div>
                 </div>
@@ -57,8 +59,9 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/startup-modern.js?h=860a1ecddc64fd24c02f2fc109343dbd"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/smart-forms.min.js"></script>
+    <script src="assets/js/startup-modern.js"></script>
 </body>
 
 </html>
