--- a/Export/index.html
+++ b/Export/index.html
@@ -5,23 +5,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Mottashaw Consulting</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=91180125d193e45e653b99b7314045c4">
-    <link rel="stylesheet" href="assets/css/Raleway.css?h=4478dfdee49cceb2ce7e6f430d4d3cfa">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Raleway.css">
+    <link rel="stylesheet" href="assets/css/bss-overrides.css">
+    <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav">
-        <div class="container"><img src="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b" style="height: 50px;">
+    <nav class="navbar navbar-expand-md fixed-top py-3 navbar-shrink" id="mainNav">
+        <div class="container"><img src="assets/img/mottashaw-logo-big.webp" style="height: 50px;">
             <div class="container" style="width: fit-content;padding: 0px;">
                 <div class="row" style="width: fit-content;margin: 0px;">
-                    <div class="col"><a class="navbar-brand d-flex align-items-center" href="/" style="margin: 0px;padding: 0px;"><span>Mottashaw Consulting</span></a><span>Switched on Solutions</span></div>
+                    <div class="col"><a class="navbar-brand d-flex align-items-center" href="" style="margin: 0px;padding: 0px;"><span>Mottashaw Consulting</span></a><span>Switched on Solutions</span></div>
                 </div>
             </div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active" href="/index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/features.html">Features</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -29,9 +31,9 @@
     <header class="pt-5">
         <section class="text-white py-4 py-xl-5">
             <div class="container-fluid">
-                <div class="border rounded border-0 d-flex flex-column justify-content-center align-items-center p-4 py-5" style="background: linear-gradient(rgba(35,35,35,0.75), rgba(35,35,35,0.75) 100%), url(&quot;assets/img/photo-1507668077129-56e32842fceb.jpg?h=16fb4fc2c3cf1f96903523746446e990&quot;) center / cover;height: 500px;">
+                <div class="border rounded border-0 d-flex flex-column justify-content-center align-items-center p-4 py-5" style="background: linear-gradient(rgba(35,35,35,0.75), rgba(35,35,35,0.75) 100%), url(&quot;assets/img/photo-1507668077129-56e32842fceb.jpg&quot;) center / cover;height: 500px;">
                     <div class="row">
-                        <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
+                        <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center mx-auto">
                             <div>
                                 <h3 class="display-6 fw-bold pb-md-4"><span class="underline">Experienced</span>&nbsp;apprenticeship and training partner</h3>
                                 <p class="mb-4">Welcome to Mottashaw Consulting Ltd, your experienced apprenticeship and training partner in the UK, delivering high-quality solutions with partners across sectors and industries and of all shapes and sizes.<br><br>Contact us today to find out more about what we do and how we can help you realise your employee and learner potential through quality bespoke solutions to your assessment, moderation, apprenticeship, and training needs.</p>
@@ -52,8 +54,8 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/startup-modern.js?h=860a1ecddc64fd24c02f2fc109343dbd"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/startup-modern.js"></script>
 </body>
 
 </html>
