Export of final site

--- a/Export/about.html
+++ b/Export/about.html
@@ -7,23 +7,25 @@
     <title>About - Mottashaw Consulting</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/Raleway.css">
+    <link rel="stylesheet" href="assets/css/Roboto%20Condensed.css">
     <link rel="stylesheet" href="assets/css/bss-overrides.css">
+    <link rel="stylesheet" href="assets/css/Ultimate-Testimonial-Slider-BS5.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md fixed-top py-3 navbar-shrink" id="mainNav">
-        <div class="container"><img src="assets/img/mottashaw-logo-big.webp" style="height: 50px;">
+    <nav class="navbar navbar-expand-sm sticky-sm-top bg-body py-3 navbar-shrink" id="mainNav">
+        <div class="container-fluid"><img src="assets/img/mottashaw-logo-big.webp" style="height: 50px;">
             <div class="container" style="width: fit-content;padding: 0px;">
                 <div class="row" style="width: fit-content;margin: 0px;">
-                    <div class="col"><a class="navbar-brand d-flex align-items-center" href="" style="margin: 0px;padding: 0px;"><span>Mottashaw Consulting</span></a><span>Switched on Solutions</span></div>
+                    <div class="col"><a class="navbar-brand d-flex align-items-center" href="/" style="margin: 0px;padding: 0px;"><span class="fs-6">Mottashaw Consulting</span></a><span>Switched on Solutions</span></div>
                 </div>
             </div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -55,6 +57,66 @@
     <section></section>
     <footer>
         <div class="container py-4 py-lg-5">
+            <h2 class="display-6 fw-bold text-center mb-4"><span class="underline">Testimonials</span></h2>
+            <div class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000" id="carousel-t">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="col-9 text-center mx-auto testimonial-content">
+                            <p class="text-center"><em>"Hey Laura,</em><br><em>I agree. It was great for me time for me to open up in a non judge mental space so thank you."</em></p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-9 offset-xl-1 text-center mx-auto testimonial-content">
+                            <p class="text-center"><em>"I would like to thank my tutor Laura for the exceptional support I have received, her understanding of some of the issues I was facing and Laura's way of making sense of how my brain works. It has been a pleasure working with Laura, she has given me the tools to help me go forward. I have found Laura very approachable and have always looked forward to my sessions with her. Thank you Laura."</em></p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-9 offset-xl-1 text-center mx-auto testimonial-content">
+                            <p class="text-center"><em>"Hi Laura</em><br><br><em>Thank you for everything, you have been a great support. I can confirm that you can upload the attached forms"</em></p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-9 offset-xl-1 text-center mx-auto testimonial-content">
+                            <p class="text-center"><em>"Laura was perfect and made things so clear and how I can make things more simple and break things down step by step so I can actually understand and be more interested."</em></p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-9 offset-xl-1 text-center mx-auto testimonial-content">
+                            <p class="text-center"><em>"Thanks Laura for everything you have been amazing.</em><br><br><em>Many of the apprentices would not have achieved without you."</em></p>
+                            <p class="signature">C</p>
+                            <p class="text-center date">Head of Apprenticeships</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-9 offset-xl-1 text-center mx-auto testimonial-content">
+                            <p class="text-center"><em>"I need more people like you Laura"</em></p>
+                            <p class="signature">K</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-9 offset-xl-1 text-center mx-auto testimonial-content">
+                            <p class="text-center"><em>"Hi Laura,</em><br><br><em>I would just like to say thank you for your honest feedback and I just wanted to say how helpful and supportive you and the team have been and how pleased I am to be able to continue my apprenticeship while starting this new job even though it's a lot of brain power required for me!</em><br><br><em>I am sure that without the apprenticeship I would not have the confidence to apply so I am very glad I did it. I think everyone should do it."</em></p>
+                            <p class="signature">J P</p>
+                            <p class="text-center date">Resource Scheduler</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-9 offset-xl-1 text-center mx-auto testimonial-content">
+                            <p class="text-center"><em>"Laura has allowed me to be more confident in my work and understand how and why I think things in a certain way.</em><br><br><em>Our sessions have allowed me to implement a number of coping strategies to bring me down from times where I am experiencing a high amount of anxiety and stress and she has always been able to be the voice of reasoning so I can respond to the more challenging areas of my work.</em><br><br><em>I would not have been able to complete my Masters studies and be able to apply for promotion in my area of expertise without Laura's help, support and guidance."</em></p>
+                            <p class="signature">Alex</p>
+                            <p class="text-center date">Head of Computing</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-9 offset-xl-1 text-center mx-auto testimonial-content">
+                            <p class="text-center"><em>"This weekend I celebrated finishing my apprenticeship, which I wouldn't have had I not had the fortune to meet Laura.</em><br><br><em>This lady changed my life.</em><br><br><em>From the moment we met, Laura became the neuro-divergent mentor I didn't know I needed. After&nbsp;initiating my journey to an eventual diagnosis of ADHD and depression; Laura flipped my learning upside down. By her persistent, endless encouragement and persistence I delivered a 35,000-word portfolio and an End Point Assessment to be proud of.</em><br><br><em>She introduced me to a new world that she had only discovered for herself a few years previously,&nbsp;and suddenly I had reasoning for the “way I am".</em><br><br><em>Through this huge emotional turmoil, you gave me a kinder perspective of myself and freely gave me a toolkit to manage my differences in the future</em><br><br><em>I wish I had more words to sing your praises, and the praises of all of my mentors, teachers, friends&nbsp;and colleagues who offered (without asking) their time, their support and their expertise to help&nbsp;me in any way they could.</em><br><br><em>*Thank You* all for your limitless generosity, I would not have done it without you.</em></p>
+                            <p class="signature">Ronnie</p>
+                        </div>
+                    </div>
+                </div>
+                <div><a class="carousel-control-prev" href="#carousel-t" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-t" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
+                <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-t" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-t" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-t" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-t" data-bs-slide-to="3"></button> <button type="button" data-bs-target="#carousel-t" data-bs-slide-to="4"></button> <button type="button" data-bs-target="#carousel-t" data-bs-slide-to="5"></button> <button type="button" data-bs-target="#carousel-t" data-bs-slide-to="6"></button> <button type="button" data-bs-target="#carousel-t" data-bs-slide-to="7"></button> <button type="button" data-bs-target="#carousel-t" data-bs-slide-to="8"></button></div>
+            </div>
             <hr>
             <div class="text-muted d-flex justify-content-between align-items-center pt-3">
                 <p class="mb-0">Copyright © 2025 Mottashaw Consulting</p>
