General Updates & Optimisations
Finished optimising all assets including conversion of all images to WebP.
Reorganisation of image assets
Attaching ALT Text to all imagery
Removal of .html extension on all pages

--- a/Export/about.html
+++ b/Export/about.html
@@ -5,44 +5,53 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>About - Mottashaw Consulting</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Raleway.css">
-    <link rel="stylesheet" href="assets/css/Roboto%20Condensed.css">
-    <link rel="stylesheet" href="assets/css/bss-overrides.css">
-    <link rel="stylesheet" href="assets/css/Ultimate-Testimonial-Slider-BS5.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Mottashaw Consulting">
+    <meta name="twitter:image" content="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <meta name="twitter:description" content="Your experienced apprenticeship and training partner in the UK, delivering high-quality solutions with partners across sectors and industries and of all shapes and sizes.">
+    <meta property="og:image" content="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <meta name="description" content="Learn more about Mottashaw’s background, values, and professional approach. This page outlines the firm’s history, mission, and commitment to providing expert, client-centred legal and consultancy services across a range of sectors.">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=2b9089ac3d02cc1e1b2f6684859260ec">
+    <link rel="stylesheet" href="assets/css/styles.min.css?h=05f404c4a7ef948b881b2a992873bb38">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-sm sticky-sm-top bg-body py-3 navbar-shrink" id="mainNav">
-        <div class="container-fluid"><img src="assets/img/mottashaw-logo-big.webp" style="height: 50px;">
-            <div class="container" style="width: fit-content;padding: 0px;">
-                <div class="row" style="width: fit-content;margin: 0px;">
-                    <div class="col"><a class="navbar-brand d-flex align-items-center" href="/" style="margin: 0px;padding: 0px;"><span class="fs-6">Mottashaw Consulting</span></a><span>Switched on Solutions</span></div>
+        <div class="container-fluid"><a href="/"><img alt="A stylized illustration of a light switch in an off position, surrounded by thick angular framing lines in black and teal blue." class="brand-image" src="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b"></a>
+            <div class="container error-container">
+                <div class="row page-row">
+                    <div class="col"><a class="navbar-brand d-flex align-items-center brand-nav" href="/"><span class="fs-6">Mottashaw Consulting</span></a><span>Switched on Solutions</span></div>
                 </div>
             </div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <section class="mt-5 py-5">
+    <section>
         <div class="container py-4 py-xl-5">
             <h1 class="display-6 fw-bold mb-4"><span class="underline">Company History</span>.</h1>
-            <p class="my-4">Launched in 2007 to provide a flexible and bespoke solutions to the learning needs within the security training and vocational qualification environment to include: front of house operations, customer service, business administration, small business operations, management, security, project delivery, and employability.<br><br>We cover all aspects of the training cycle from; training needs analysis such as for members of a community forum; creation of materials to meet a specific departmental need such as GDPR, delivery of complete standardised qualifications such as the SIA PSS (CCTV) licencing course; assessment of learning such as NVQ2 Team Leading and underpinning diploma for Business Administration NVQ3; End Point Assessment of apprenticeships from “both sides of the desk” and; internal verification and moderation.<br><br>Please <a href="contact.html">contact us</a> and find out how we can help you.</p>
-            <div class="row gy-4 gy-md-0" style="padding-bottom: 30px;">
-                <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
-                    <div style="max-width: 350px;">
+            <p class="my-4">Launched in 2007 to provide a flexible and bespoke solutions to the learning needs within the security training and vocational qualification environment to include: front of house operations, customer service, business administration, small business operations, management, security, project delivery, and employability.<br><br>We cover all aspects of the training cycle from; training needs analysis such as for members of a community forum; creation of materials to meet a specific departmental need such as GDPR, delivery of complete standardised qualifications such as the SIA PSS (CCTV) licencing course; assessment of learning such as NVQ2 Team Leading and underpinning diploma for Business Administration NVQ3; End Point Assessment of apprenticeships from “both sides of the desk” and; internal verification and moderation.<br><br>Please <a href="contact">contact us</a> and find out how we can help you.</p>
+            <div class="row gy-4 gy-md-0 page-padding">
+                <div class="col justify-content-center align-items-center">
+                    <div class="page-divs">
                         <h1 class="display-6 fw-bold mb-4"><span class="underline">Director</span></h1>
                         <p class="my-4">We are led by Laura, our energetic and enthusiastic learning professional with over 30 years’ experience providing flexible work-based training and learning, who holds “life-long learning” at the core.. Achieves objectives by applying new ideas through successful partnerships, collaboration, engagement and hard work.</p>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="assets/img/Laura.webp" width="476" height="634"></div>
+                <div class="col">
+                    <div><img class="rounded img-fluid w-100 headshot" alt="A woman smiling warmly at the camera while seated in a cozy wooden interior, wearing glasses, a festive black top with gift and snowflake prints, and a bright red scarf." width="1490" height="1986" src="assets/img/Laura.webp?h=0eb99759275e5825c144189609dfc1c7"></div>
                 </div>
             </div>
             <h1 class="display-6 fw-bold mb-4"><span class="underline">Our Clients</span></h1>
@@ -56,7 +65,7 @@
     </section>
     <section></section>
     <footer>
-        <div class="container py-4 py-lg-5">
+        <div class="container">
             <h2 class="display-6 fw-bold text-center mb-4"><span class="underline">Testimonials</span></h2>
             <div class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000" id="carousel-t">
                 <div class="carousel-inner">
@@ -124,7 +133,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/startup-modern.js"></script>
+    <script src="assets/js/script.min.js?h=4b1f99f2e8ff6ac8a7c04891f6b7129c"></script>
 </body>
 
 </html>
