--- a/Export/contact.html
+++ b/Export/contact.html
@@ -5,33 +5,42 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Contact - Mottashaw Consulting</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Raleway.css">
-    <link rel="stylesheet" href="assets/css/Roboto%20Condensed.css">
-    <link rel="stylesheet" href="assets/css/bss-overrides.css">
-    <link rel="stylesheet" href="assets/css/Ultimate-Testimonial-Slider-BS5.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Mottashaw Consulting">
+    <meta name="twitter:image" content="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <meta name="twitter:description" content="Your experienced apprenticeship and training partner in the UK, delivering high-quality solutions with partners across sectors and industries and of all shapes and sizes.">
+    <meta property="og:image" content="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <meta name="description" content="Provides contact details and a direct enquiry form for reaching Mottashaw. Visitors can get in touch for consultations, service enquiries, or general information about the firm’s legal and consultancy offerings.">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <link rel="icon" type="image/webp" sizes="640x515" href="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=2b9089ac3d02cc1e1b2f6684859260ec">
+    <link rel="stylesheet" href="assets/css/styles.min.css?h=05f404c4a7ef948b881b2a992873bb38">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-sm sticky-sm-top bg-body py-3 navbar-shrink" id="mainNav">
-        <div class="container-fluid"><img src="assets/img/mottashaw-logo-big.webp" style="height: 50px;">
-            <div class="container" style="width: fit-content;padding: 0px;">
-                <div class="row" style="width: fit-content;margin: 0px;">
-                    <div class="col"><a class="navbar-brand d-flex align-items-center" href="/" style="margin: 0px;padding: 0px;"><span class="fs-6">Mottashaw Consulting</span></a><span>Switched on Solutions</span></div>
+        <div class="container-fluid"><a href="/"><img alt="A stylized illustration of a light switch in an off position, surrounded by thick angular framing lines in black and teal blue." src="assets/img/mottashaw-logo-big.webp?h=a6d806ae5c56e5c3abf5561ad59d922b" class="brand-image"></a>
+            <div class="container error-container">
+                <div class="row page-row">
+                    <div class="col"><a class="navbar-brand d-flex align-items-center brand-nav" href="/"><span class="fs-6">Mottashaw Consulting</span></a><span>Switched on Solutions</span></div>
                 </div>
             </div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <section class="mt-5 py-5">
-        <div class="container" style="height: 55px;"></div>
+    <section>
+        <div class="container spacer"></div>
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
@@ -54,7 +63,7 @@
         </div>
     </section>
     <footer>
-        <div class="container py-4 py-lg-5">
+        <div class="container">
             <h2 class="display-6 fw-bold text-center mb-4"><span class="underline">Testimonials</span></h2>
             <div class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000" id="carousel-t">
                 <div class="carousel-inner">
@@ -122,8 +131,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/smart-forms.min.js"></script>
-    <script src="assets/js/startup-modern.js"></script>
+    <script src="assets/js/script.min.js?h=4b1f99f2e8ff6ac8a7c04891f6b7129c"></script>
+    <script src="assets/js/smart-forms.min.min.js?h=e020daad4628441515be04aa856e08f4"></script>
 </body>
 
 </html>
